--- a/app/src/main/res/menu/forecastfragment.xml
+++ b/app/src/main/res/menu/forecastfragment.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_refresh"
-        android:icon="@drawable/common_plus_signin_btn_icon_light_focused"
+
+    <item
         android:title="@string/refresh"
         app:showAsAction="ifRoom"
-        />
+        android:icon="@drawable/common_plus_signin_btn_icon_light_normal"
+        android:id="@+id/showOnMap"/>
 
 </menu>
